add sample update & delete user
